# batchroute

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HOWTO.md  README.md  batchroute.spec  pyproject.toml
.github/workflows/: release-build.yml
scripts/: build_release.py  download_geolite2.py  generate_mock_routes.py  generate_release_notes.py
src/: config.py  geoip.py  main.py  models.py  output.py  parser.py  prober.py  resolver.py  text_format.py
visualizer/: app.py  styles.py
visualizer/assets/: graph_controls.js  style.css
